[gd_scene load_steps=2 format=3 uid="uid://d9yqjqyqjqyqj"]

[ext_resource type="Script" path="res://scripts/effects/combat_animation.gd" id="1_abcde"]

[node name="CombatAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_abcde")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="CombatLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "COMBATE!"
horizontal_alignment = 1

[node name="AttackerPiece" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
custom_minimum_size = Vector2(64, 64)

[node name="VsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "VS"
horizontal_alignment = 1

[node name="DefenderPiece" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5
custom_minimum_size = Vector2(64, 64)

[node name="OutcomeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resultado..."
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
